--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,35 @@
+# Node modules
+node_modules/
 
+# Environment variables
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Build output
+dist/
+out/
+.build/
+
+# Next.js cache
+.next/
+
+# Remix cache
+.remix/
+
+# VSCode settings
+.vscode/
+
+# MacOS specific
+*.swp
