--- a/package.json
+++ b/package.json
@@ -1,54 +1,51 @@
 {
-  "name": "ecocommerce-platform",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "prisma generate && next build",
-    "start": "next start",
-    "lint": "next lint",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:seed": "tsx prisma/seed.ts",
-    "relayer:once": "tsx -e \"import{RelayerService}from './lib/relayer';const r=new RelayerService();r.processOneFromQueue();\"",
-    "postinstall": "prisma generate"
-  },
-  "dependencies": {
-    "@next/bundle-analyzer": "^14.0.4",
-    "@prisma/client": "^5.7.1",
-    "@rainbow-me/rainbowkit": "^1.3.5",
-    "@upstash/redis": "^1.28.1",
-    "@vercel/kv": "^0.2.4",
-    "ethers": "^6.13.1",
-    "ipfs-http-client": "^60.0.1",
-    "jose": "^5.2.0",
-    "next": "14.0.4",
-    "qrcode": "^1.5.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "connectkit": "^1.9.1",
-    "ioredis": "^5.4.1",
-    "lucide-react": "^0.453.0",
-    "react-dropzone": "^14.2.3",
-    "react-markdown": "^9.0.3",
-    "viem": "^2.35.1",
-    "wagmi": "^1.4.12",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "prisma": "^5.7.1",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5",
-    "tsx": "^4.6.2"
-  }
+    "name":  "ecocommerce-platform",
+    "version":  "0.1.0",
+    "private":  true,
+    "scripts":  {
+                    "dev":  "next dev",
+                    "build":  "prisma generate \u0026\u0026 next build",
+                    "start":  "next start",
+                    "lint":  "next lint",
+                    "db:generate":  "prisma generate",
+                    "db:push":  "prisma db push",
+                    "db:seed":  "tsx prisma/seed.ts",
+                    "relayer:once":  "tsx -e \"import{RelayerService}from \u0027./lib/relayer\u0027;const r=new RelayerService();r.processOneFromQueue();\"",
+                    "postinstall":  "prisma generate"
+                },
+    "dependencies":  {
+                         "@next/bundle-analyzer":  "^14.0.4",
+                         "@prisma/client":  "^5.7.1",
+                         "@rainbow-me/rainbowkit":  "^2.2.8",
+                         "@upstash/redis":  "^1.28.1",
+                         "@vercel/kv":  "^0.2.4",
+                         "connectkit":  "^1.9.1",
+                         "ethers":  "^6.13.1",
+                         "ioredis":  "^5.4.1",
+                         "ipfs-http-client":  "^60.0.1",
+                         "jose":  "^5.2.0",
+                         "lucide-react":  "^0.453.0",
+                         "next":  "14.0.4",
+                         "qrcode":  "^1.5.3",
+                         "react":  "^18",
+                         "react-dom":  "^18",
+                         "react-dropzone":  "^14.2.3",
+                         "react-markdown":  "^9.0.3",
+                         "viem":  "^2.35.1",
+                         "wagmi":  "^2.16.6",
+                         "zod":  "^3.22.4"
+                     },
+    "devDependencies":  {
+                            "@types/node":  "^20",
+                            "@types/react":  "^18",
+                            "@types/react-dom":  "^18",
+                            "autoprefixer":  "^10.0.1",
+                            "eslint":  "^8",
+                            "eslint-config-next":  "14.0.4",
+                            "postcss":  "^8",
+                            "prisma":  "^5.7.1",
+                            "tailwindcss":  "^3.3.0",
+                            "tsx":  "^4.6.2",
+                            "typescript":  "^5"
+                        }
 }
-
-
-
