--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,22 +34,27 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      # Setup Node.js with caching
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
       
+      # Setup Python with caching
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-      
+          cache: 'pip'
+
+      # Install dependencies
       - name: Install dependencies
         run: |
           npm install
           pip install -r ai-service/requirements.txt
       
+      # Setup Database
       - name: Setup Database
         run: |
           until pg_isready -h localhost -p 5432; do
@@ -61,14 +66,17 @@ jobs:
         env:
           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/ecocommerce_test
       
+      # Run linting
       - name: Run linting
         run: |
           npm run lint
           flake8 ai-service/
       
+      # Run type checking
       - name: Run type checking
         run: npm run type-check
       
+      # Run tests
       - name: Run tests
         run: |
           npm test
@@ -78,6 +86,7 @@ jobs:
           REDIS_URL: redis://localhost:6379
           JWT_SECRET: test-secret
       
+      # Build application
       - name: Build application
         run: npm run build
         env:
@@ -104,7 +113,7 @@ jobs:
 
   deploy-frontend:
     if: github.ref == 'refs/heads/main'
-    needs: [test, deploy-ai-service] # remove deploy-ai-service if you want independent frontend deploy
+    needs: [test, deploy-ai-service] # remove deploy-ai-service if frontend should deploy independently
     runs-on: ubuntu-latest
     
     steps:
