--- a/package.json
+++ b/package.json
@@ -1,51 +1,55 @@
 {
-    "name":  "ecocommerce-platform",
-    "version":  "0.1.0",
-    "private":  true,
-    "scripts":  {
-                    "dev":  "next dev",
-                    "build":  "prisma generate \u0026\u0026 next build",
-                    "start":  "next start",
-                    "lint":  "next lint",
-                    "db:generate":  "prisma generate",
-                    "db:push":  "prisma db push",
-                    "db:seed":  "tsx prisma/seed.ts",
-                    "relayer:once":  "tsx -e \"import{RelayerService}from \u0027./lib/relayer\u0027;const r=new RelayerService();r.processOneFromQueue();\"",
-                    "postinstall":  "prisma generate"
-                },
-    "dependencies":  {
-                         "@next/bundle-analyzer":  "^14.0.4",
-                         "@prisma/client":  "^5.7.1",
-                         "@rainbow-me/rainbowkit":  "^2.2.8",
-                         "@upstash/redis":  "^1.28.1",
-                         "@vercel/kv":  "^0.2.4",
-                         "connectkit":  "^1.9.1",
-                         "ethers":  "^6.13.1",
-                         "ioredis":  "^5.4.1",
-                         "ipfs-http-client":  "^60.0.1",
-                         "jose":  "^5.2.0",
-                         "lucide-react":  "^0.453.0",
-                         "next":  "14.0.4",
-                         "qrcode":  "^1.5.3",
-                         "react":  "^18",
-                         "react-dom":  "^18",
-                         "react-dropzone":  "^14.2.3",
-                         "react-markdown":  "^9.0.3",
-                         "viem":  "^2.35.1",
-                         "wagmi":  "^2.16.6",
-                         "zod":  "^3.22.4"
-                     },
-    "devDependencies":  {
-                            "@types/node":  "^20",
-                            "@types/react":  "^18",
-                            "@types/react-dom":  "^18",
-                            "autoprefixer":  "^10.0.1",
-                            "eslint":  "^8",
-                            "eslint-config-next":  "14.0.4",
-                            "postcss":  "^8",
-                            "prisma":  "^5.7.1",
-                            "tailwindcss":  "^3.3.0",
-                            "tsx":  "^4.6.2",
-                            "typescript":  "^5"
-                        }
+  "name": "ecocommerce-platform",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "prisma generate && next build",
+    "start": "next start",
+    "lint": "next lint",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:seed": "tsx prisma/seed.ts",
+    "relayer:once": "tsx -e \"import { RelayerService } from './lib/relayer'; const r = new RelayerService(); r.processOneFromQueue();\"",
+    "postinstall": "prisma generate"
+  },
+  "dependencies": {
+    "@next/bundle-analyzer": "14.2.32",
+    "@prisma/client": "5.22.0",
+    "@rainbow-me/rainbowkit": "2.2.8",
+    "@upstash/redis": "1.35.3",
+    "@vercel/kv": "0.2.4",
+    "connectkit": "1.9.1",
+    "ethers": "6.15.0",
+    "ioredis": "5.7.0",
+    "ipfs-http-client": "60.0.1",
+    "jose": "5.10.0",
+    "lucide-react": "0.453.0",
+    "next": "14.0.4",
+    "qrcode": "1.5.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-dropzone": "14.3.8",
+    "react-markdown": "9.1.0",
+    "viem": "2.36.0",
+    "wagmi": "2.16.8",
+    "zod": "3.25.76",
+    "autoprefixer": "10.4.21",
+    "postcss": "8.5.6",
+    "@wagmi/connectors": "4.3.10",
+    "@wagmi/core": "2.20.1"
+  },
+  "devDependencies": {
+    "@types/node": "20.19.11",
+    "@types/react": "18.3.24",
+    "@types/react-dom": "18.3.7",
+    "autoprefixer": "10.4.21",
+    "eslint": "8.57.1",
+    "eslint-config-next": "14.0.4",
+    "postcss": "8.5.6",
+    "prisma": "5.22.0",
+    "tailwindcss": "3.4.17",
+    "tsx": "4.20.5",
+    "typescript": "5.9.2"
+  }
 }
