--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "zod": "3.25.76",
     "autoprefixer": "10.4.21",
     "postcss": "8.5.6",
-    "@wagmi/connectors": "4.3.10",
-    "@wagmi/core": "2.20.1"
+    "@wagmi/core": "2.9.8",
+    "@wagmi/connectors": "4.3.10"
+
   },
   "devDependencies": {
     "@types/node": "20.19.11",
