--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "autoprefixer": "10.4.21",
     "postcss": "8.5.6",
     "@wagmi/core": "2.9.8",
-    "@wagmi/connectors": "4.3.10"
+    "@wagmi/connectors": "4.3.10",
+    "pino-pretty": "^9.1.1"
 
   },
   "devDependencies": {
