--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "react-dropzone": "14.3.8",
     "react-markdown": "9.1.0",
     "viem": "2.36.0",
-    "wagmi": "2.16.8",
+    "wagmi": "^1.5.0",
     "zod": "3.25.76",
     "autoprefixer": "10.4.21",
     "postcss": "8.5.6",
-    "@wagmi/core": "2.9.8",
-    "@wagmi/connectors": "4.3.10",
+    "@wagmi/core": "2.20.1",
+    "@wagmi/connectors": "5.9.8",
     "pino-pretty": "^9.1.1"
 
   },
