--- a/package.json
+++ b/package.json
@@ -32,14 +32,13 @@
     "react-dropzone": "14.3.8",
     "react-markdown": "9.1.0",
     "viem": "2.36.0",
-    "wagmi": "^1.5.0",
+    "wagmi": "2.9.8",
+    "@wagmi/core": "2.20.1",
+    "@wagmi/connectors": "5.9.8",
     "zod": "3.25.76",
     "autoprefixer": "10.4.21",
     "postcss": "8.5.6",
-    "@wagmi/core": "2.20.1",
-    "@wagmi/connectors": "5.9.8",
     "pino-pretty": "^9.1.1"
-
   },
   "devDependencies": {
     "@types/node": "20.19.11",
