--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
   "dependencies": {
     "@next/bundle-analyzer": "14.2.32",
     "@prisma/client": "5.22.0",
-    "@rainbow-me/rainbowkit": "2.2.8",
     "@upstash/redis": "1.35.3",
     "@vercel/kv": "0.2.4",
-    "connectkit": "1.9.1",
     "ethers": "6.15.0",
     "ioredis": "5.7.0",
     "ipfs-http-client": "60.0.1",
@@ -32,7 +30,7 @@
     "react-dropzone": "14.3.8",
     "react-markdown": "9.1.0",
     "viem": "2.36.0",
-    "wagmi": "2.9.8",
+    "wagmi": "^1.5.0",
     "@wagmi/core": "2.20.1",
     "@wagmi/connectors": "5.9.8",
     "zod": "3.25.76",
