--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "zod": "3.25.76",
     "autoprefixer": "10.4.21",
     "postcss": "8.5.6",
-    "pino-pretty": "^9.1.1"
+    "pino-pretty": "^9.1.1",
+     "wagmi": "^2.9.0",
+    "connectkit": "1.9.1"
   },
   "devDependencies": {
     "@types/node": "20.19.11",
