--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,8 @@
     "**/*.tsx",
     "hardhat.config.ts"                   // <- include config explicitly
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "blockchain"
+  ]
 }
