--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "types/**/*.d.ts",
     "hardhat.config.ts"                   // <- include config explicitly
   ],
   "exclude": [
