--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "paths": {
       "@/*": ["./*"]
     },
-    "types": ["node", "hardhat"]          // <- added Hardhat types
+    "types": ["node"]          // <- added Hardhat types
   },
   "include": [
     "next-env.d.ts",
