--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ethers": "6.15.0",
     "ioredis": "5.7.0",
     "ipfs-http-client": "60.0.1",
+    "framer-motion": "^11.x.x",
     "jose": "5.10.0",
     "lucide-react": "0.453.0",
     "next": "14.0.4",
