--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "lucide-react": "0.453.0",
     "next": "14.0.4",
     "qrcode": "1.5.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-dropzone": "14.3.8",
