--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "postcss": "8.5.6",
     "pino-pretty": "^9.1.1",
      "wagmi": "^2.9.0",
-    "connectkit": "1.9.1"
+    "connectkit": "1.9.1",
+    "@radix-ui/react-progress": "^1.0.0",
+    "@radix-ui/react-slot": "^1.0.0",
+    "@radix-ui/react-tabs": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "20.19.11",
