--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "@radix-ui/react-tabs": "^1.0.0",
      "tailwindcss-animate": "^1.0.7",
      "sonner": "^1.5.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "sonner": "^2.0.7",
   },
   "devDependencies": {
     "@types/node": "20.19.11",
