--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
      "tailwindcss-animate": "^1.0.7",
      "sonner": "^1.5.0",
     "react-router-dom": "^6.27.0",
-    "sonner": "^2.0.7",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@types/node": "20.19.11",
