--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "pino-pretty": "^9.1.1",
      "wagmi": "^2.9.0",
     "connectkit": "1.9.1",
+    "@radix-ui/react-tooltip": "^1.1.5",
     "@radix-ui/react-progress": "^1.0.0",
     "@radix-ui/react-slot": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
