--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "git": {
+    "deploymentEnabled": false
+  },
   "functions": {
     "app/api/**/*.ts": {
       "maxDuration": 30
