--- a/package.json
+++ b/package.json
@@ -17,43 +17,40 @@
     "@next/bundle-analyzer": "14.2.32",
     "@prisma/client": "5.22.0",
     "@upstash/redis": "1.35.3",
-    "tailwind-merge": "^2.2.1",
     "@vercel/kv": "0.2.4",
-    "ethers": "6.15.0",
-    "ioredis": "5.7.0",
-    "ipfs-http-client": "60.0.1",
-    "framer-motion": "^11.x.x",
-    "jose": "5.10.0",
-    "lucide-react": "0.453.0",
-    "next": "14.0.4",
-    "qrcode": "1.5.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "connectkit": "1.9.1",
+    "ethers": "6.15.0",
+    "framer-motion": "^11.3.30",
+    "ioredis": "5.7.0",
+    "ipfs-http-client": "60.0.1",
+    "jose": "5.10.0",
+    "lucide-react": "0.441.0",
+    "next": "14.0.4",
+    "pino-pretty": "^9.1.1",
+    "qrcode": "1.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-dropzone": "14.3.8",
     "react-markdown": "9.1.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "2.36.0",
     "@wagmi/core": "2.20.2",
     "@wagmi/connectors": "5.9.8",
+    "wagmi": "^2.9.0",
     "zod": "3.25.76",
-    "autoprefixer": "10.4.21",
-    "postcss": "8.5.6",
-    "pino-pretty": "^9.1.1",
-     "wagmi": "^2.9.0",
-    "connectkit": "1.9.1",
     "@radix-ui/react-tooltip": "^1.1.5",
     "@radix-ui/react-progress": "^1.0.0",
     "@radix-ui/react-slot": "^1.0.0",
-    "@radix-ui/react-tabs": "^1.0.0",
-     "tailwindcss-animate": "^1.0.7",
-    "react-router-dom": "^6.27.0",
-    "sonner": "^2.0.7"
+    "@radix-ui/react-tabs": "^1.0.0"
   },
   "devDependencies": {
-    "@types/node": "20.19.11",
-    "@types/react": "18.3.24",
-    "@types/react-dom": "18.3.7",
+    "@types/node": "^22.7.5",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "10.4.21",
     "eslint": "8.57.1",
     "eslint-config-next": "14.0.4",
