--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "node",          // <- changed from "bundler"
+    "moduleResolution": "bundler",             // <- preferred for Next.js + TS5
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -18,14 +18,15 @@
       "@/*": ["./*"],
       "@/src/*": ["./src/*"]
     },
-    "types": ["node"]          // <- added Hardhat types
+    "types": ["node"]                          // <- keep Hardhat types
   },
   "include": [
     "next-env.d.ts",
+    ".next/types/**/*.ts",                     // <- add to stop reconfigure warnings
     "**/*.ts",
     "**/*.tsx",
     "types/**/*.d.ts",
-    "hardhat.config.ts"                   // <- include config explicitly
+    "hardhat.config.ts"
   ],
   "exclude": [
     "node_modules",
