--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "@radix-ui/react-progress": "^1.0.0",
     "@radix-ui/react-slot": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "@radix-ui/react-toast": "^1.1.5"
   },
   "devDependencies": {
     "@types/node": "^22.7.5",
