--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
+  "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "nextjs",
+  "regions": ["iad1"],
   "git": {
     "deploymentEnabled": false
   },
