--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && next build && next export -o dist",
     "start": "next start",
+    "export": "next export -o dist",
     "lint": "next lint",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
