--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build && next export -o dist",
+    "build": "prisma generate && next build",
     "start": "next start",
     "export": "next export -o dist",
     "lint": "next lint",
