--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "tailwind-variants": "^0.2.1",
     "viem": "2.36.0",
     "@wagmi/core": "2.20.2",
     "@wagmi/connectors": "5.9.8",
@@ -46,6 +47,7 @@
     "@radix-ui/react-progress": "^1.0.0",
     "@radix-ui/react-slot": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
+    "@radix-ui/react-select": "^2.0.0",
     "react-router-dom": "^6.27.0",
     "@radix-ui/react-toast": "^1.1.5"
   },
