--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "5.22.0",
     "@upstash/redis": "1.35.3",
     "@vercel/kv": "0.2.4",
+    "@motionone/react": "^1.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "connectkit": "1.9.1",
