--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@radix-ui/react-slot": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-radio-group": "^1.1.2"
+    "@radix-ui/react-radio-group": "^1.1.2",
     "react-router-dom": "^6.27.0",
     "@radix-ui/react-toast": "^1.1.5"
   },
