--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,44 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",             // <- preferred for Next.js + TS5
+    "moduleResolution": "bundler", // <- preferred for Next.js + TS5
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-      "@/src/*": ["./src/*"]
+      "@/*": [
+        "./*"
+      ],
+      "@/src/*": [
+        "./src/*"
+      ]
     },
-    "types": ["node"]                          // <- keep Hardhat types
+    "types": [
+      "node"
+    ] // <- keep Hardhat types
+    ,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "next-env.d.ts",
-    ".next/types/**/*.ts",                     // <- add to stop reconfigure warnings
+    ".next/types/**/*.ts", // <- add to stop reconfigure warnings
     "**/*.ts",
     "**/*.tsx",
     "types/**/*.d.ts",
