Integrate AI waste classification with Hugging Face API and Supabase dataset storage

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ INFURA_PROJECT_SECRET=
 
 # AI Service
 AI_SERVICE_URL=http://localhost:8000
+HUGGING_FACE_TOKEN=your-hugging-face-token
 
 # Ethereum
 ETH_RPC_URL=
