--- a/package.json
+++ b/package.json
@@ -16,34 +16,6 @@
   "dependencies": {
     "@next/bundle-analyzer": "14.2.32",
     "@prisma/client": "5.22.0",
-    "@upstash/redis": "1.35.3",
-    "@vercel/kv": "0.2.4",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "connectkit": "1.9.1",
-    "ethers": "6.15.0",
-    "framer-motion": "^11.3.30",
-    "ioredis": "5.7.0",
-    "ipfs-http-client": "60.0.1",
-    "jose": "5.10.0",
-    "lucide-react": "0.441.0",
-    "next": "14.0.4",
-    "pino-pretty": "^9.1.1",
-    "qrcode": "1.5.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-dropzone": "14.3.8",
-    "react-markdown": "9.1.0",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "tailwind-variants": "^0.2.1",
-    "viem": "2.36.0",
-    "@wagmi/core": "2.20.2",
-    "@wagmi/connectors": "5.9.8",
-    "wagmi": "^2.9.0",
-    "zod": "3.25.76",
-    "react-router-dom": "^6.27.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -70,7 +42,36 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
-    "@radix-ui/react-tooltip": "^1.2.7"
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/supabase-js": "^2.57.4",
+    "@upstash/redis": "1.35.3",
+    "@vercel/kv": "0.2.4",
+    "@wagmi/connectors": "5.9.8",
+    "@wagmi/core": "2.20.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "connectkit": "1.9.1",
+    "ethers": "6.15.0",
+    "framer-motion": "^11.3.30",
+    "ioredis": "5.7.0",
+    "ipfs-http-client": "60.0.1",
+    "jose": "5.10.0",
+    "lucide-react": "0.441.0",
+    "next": "14.0.4",
+    "pino-pretty": "^9.1.1",
+    "qrcode": "1.5.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-dropzone": "14.3.8",
+    "react-markdown": "9.1.0",
+    "react-router-dom": "^6.27.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^2.2.1",
+    "tailwind-variants": "^0.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "2.36.0",
+    "wagmi": "^2.9.0",
+    "zod": "3.25.76"
   },
   "devDependencies": {
     "@types/node": "^22.7.5",
