--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.57.4",
     "@tensorflow/tfjs": "^4.22.0",
+    "@types/qrcode": "^1.5.6",
     "@upstash/redis": "1.35.3",
     "@vercel/kv": "0.2.4",
     "@wagmi/connectors": "5.9.8",
@@ -60,7 +61,7 @@
     "lucide-react": "0.441.0",
     "next": "14.0.4",
     "pino-pretty": "^9.1.1",
-    "qrcode": "1.5.4",
+    "qrcode": "^1.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-dropzone": "14.3.8",
